<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_backspace_24"
                android:contentDescription="@string/img_content"/>

            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gads"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:layout_marginStart="40dp"
                android:contentDescription="@string/img_content"
                android:layout_marginLeft="40dp" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/submissionText"
            android:layout_below="@id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submission"
            android:textColor="@color/textChocolate"
            style="@style/ShapeAppearance.MaterialComponents.MediumComponent"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>

        <View
            android:id="@+id/viewLine"
            android:layout_below="@id/submissionText"
            android:layout_width="wrap_content"
            android:background="@color/textChocolate"
            android:layout_height="1dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:hint="@string/hint_first_name"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:inputType="text"
            android:autofillHints="@string/hint_first_name"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@color/colorWhite"
            android:layout_marginStart="5dp"
            android:hint="@string/hint_last_name"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:autofillHints="@string/hint_last_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/hint_email_address"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:inputType="text"
            android:autofillHints="@string/hint_email_address"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/hint_project_link"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:inputType="text"
            android:autofillHints="@string/hint_email_address"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            />
    </LinearLayout>
</LinearLayout>